проблема с фото решена

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <header class="header">
          afafaadafa adafafas
       </header>
-      <!-- <img src="./img/2.jpg" alt="img"> -->
+      <img src="./img/2.jpg" alt="img">
    </div>
 </body>
 
